--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sindresorhus/slugify": "^2.1.0",
+    "gray-matter": "^4.0.3",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^7.0.0",
+    "react-syntax-highlighter": "^15.4.4",
+    "remark-gfm": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.17",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.3.5"
