--- a/package.json
+++ b/package.json
@@ -9,14 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/helper-plugin-utils": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/util": "^1.6.22",
     "@sindresorhus/slugify": "^2.1.0",
+    "@types/babel__core": "^7.1.15",
+    "@types/babel__helper-plugin-utils": "^7.10.0",
     "gray-matter": "^4.0.3",
+    "mdast-util-to-markdown": "^1.1.1",
+    "mdx-bundler": "^6.0.1",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.0",
     "react-syntax-highlighter": "^15.4.4",
-    "remark-gfm": "^2.0.0"
+    "remark": "^14.0.1",
+    "remark-gfm": "^2.0.0",
+    "remark-mdx": "^1.6.22"
   },
   "devDependencies": {
     "@types/react": "17.0.17",
