--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/util": "^1.6.22",
     "@sindresorhus/slugify": "^2.1.0",
-    "@types/babel__core": "^7.1.15",
-    "@types/babel__helper-plugin-utils": "^7.10.0",
+    "esbuild": "^0.12.24",
     "gray-matter": "^4.0.3",
-    "mdast-util-to-markdown": "^1.1.1",
+    "image-size": "^1.0.0",
     "mdx-bundler": "^6.0.1",
     "next": "11.1.0",
     "react": "17.0.2",
@@ -27,8 +26,12 @@
     "react-markdown": "^7.0.0",
     "react-syntax-highlighter": "^15.4.4",
     "remark": "^14.0.1",
+    "remark-autolink-headings": "^7.0.1",
+    "remark-footnotes": "^4.0.1",
     "remark-gfm": "^2.0.0",
-    "remark-mdx": "^1.6.22"
+    "remark-math": "^5.1.0",
+    "remark-slug": "^7.0.0",
+    "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.17",
