--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remark-gfm": "^2.0.0",
     "remark-math": "^5.1.0",
     "remark-slug": "^7.0.0",
+    "remark-wiki-link": "^1.0.4",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
