--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "image-size": "^1.0.0",
     "mdx-bundler": "^6.0.1",
     "next": "11.1.0",
+    "nocturnal-ui-react": "^0.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.0",
