--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mdx-bundler": "^6.0.1",
     "next": "11.1.0",
     "nocturnal-ui-react": "^0.0.6",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^7.0.0",
@@ -37,6 +38,7 @@
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.17",
     "@types/react-syntax-highlighter": "^13.5.2",
     "eslint": "7.32.0",
