--- a/package.json
+++ b/package.json
@@ -10,37 +10,45 @@
     "copyImagesDir": "node ./scripts/copyDir.js 'content/Images' 'public/Images'"
   },
   "dependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/helper-plugin-utils": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-    "@babel/plugin-syntax-jsx": "^7.14.5",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/util": "^1.6.22",
-    "@sindresorhus/slugify": "^2.1.0",
-    "esbuild": "^0.12.24",
-    "gray-matter": "^4.0.3",
-    "image-size": "^1.0.0",
-    "mdx-bundler": "^6.0.1",
+    "@babel/core": "7.15.0",
+    "@babel/helper-plugin-utils": "7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.14.7",
+    "@babel/plugin-syntax-jsx": "7.14.5",
+    "@mapbox/rehype-prism": "^0.7.0",
+    "@mdx-js/mdx": "1.6.22",
+    "@mdx-js/util": "1.6.22",
+    "@sindresorhus/slugify": "2.1.0",
+    "esbuild": "0.12.24",
+    "gray-matter": "4.0.3",
+    "hast-util-to-html": "^8.0.2",
+    "hast-util-to-string": "^2.0.0",
+    "image-size": "1.0.0",
+    "mdx-bundler": "6.0.1",
     "next": "11.1.0",
-    "nocturnal-ui-react": "^0.0.6",
-    "nprogress": "^0.2.0",
+    "nocturnal-ui-react": "0.0.8",
+    "nprogress": "0.2.0",
+    "parse-numeric-range": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^7.0.0",
-    "react-syntax-highlighter": "^15.4.4",
-    "remark": "^14.0.1",
-    "remark-autolink-headings": "^7.0.1",
-    "remark-footnotes": "^4.0.1",
-    "remark-gfm": "^2.0.0",
-    "remark-math": "^5.1.0",
-    "remark-slug": "^7.0.0",
-    "remark-wiki-link": "^1.0.4",
+    "react-markdown": "7.0.0",
+    "react-syntax-highlighter": "15.4.4",
+    "refractor": "^4.1.1",
+    "rehype-parse": "^8.0.3",
+    "rehype-prism-plus": "^1.0.0",
+    "remark": "14.0.1",
+    "remark-autolink-headings": "7.0.1",
+    "remark-footnotes": "4.0.1",
+    "remark-gfm": "2.0.0",
+    "remark-math": "5.1.0",
+    "remark-slug": "7.0.0",
+    "remark-wiki-link": "1.0.4",
+    "unified": "^10.1.0",
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0",
+    "@types/nprogress": "0.2.0",
     "@types/react": "17.0.17",
-    "@types/react-syntax-highlighter": "^13.5.2",
+    "@types/react-syntax-highlighter": "13.5.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.3.5"
