--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/util": "1.6.22",
     "@sindresorhus/slugify": "2.1.0",
     "date-fns": "2.23.0",
+    "dotenv": "^10.0.0",
     "esbuild": "0.12.24",
     "gray-matter": "4.0.3",
     "image-size": "1.0.0",
