--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nprogress": "0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-github-btn": "^1.2.1",
     "react-markdown": "7.0.0",
     "rehype-prism-plus": "1.0.0",
     "remark": "14.0.1",
