rewritten GitHub follow button

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "2.23.0",
     "dotenv": "^10.0.0",
     "esbuild": "0.12.24",
+    "github-buttons": "^2.19.0",
     "gray-matter": "4.0.3",
     "image-size": "1.0.0",
     "mdx-bundler": "6.0.1",
@@ -30,7 +31,6 @@
     "nprogress": "0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-github-btn": "^1.2.1",
     "react-markdown": "7.0.0",
     "rehype-prism-plus": "1.0.0",
     "remark": "14.0.1",
