--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "date-fns": "2.23.0",
     "dotenv": "^10.0.0",
     "esbuild": "0.12.24",
+    "esbuild-css-modules-plugin": "^2.0.9",
+    "esbuild-plugin-css-modules": "^0.1.3",
     "github-buttons": "^2.19.0",
     "gray-matter": "4.0.3",
     "image-size": "1.0.0",
     "mdx-bundler": "6.0.1",
     "next": "11.1.0",
-    "nocturnal-ui-react": "0.0.14",
+    "nocturnal-ui-react": "0.0.15",
     "nprogress": "0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
