--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/util": "1.6.22",
     "@sindresorhus/slugify": "2.1.0",
+    "canvas": "^2.8.0",
     "date-fns": "2.23.0",
     "dotenv": "^10.0.0",
     "esbuild": "0.12.24",
-    "esbuild-css-modules-plugin": "^2.0.9",
-    "esbuild-plugin-css-modules": "^0.1.3",
-    "github-buttons": "^2.19.0",
+    "github-buttons": "2.19.0",
     "gray-matter": "4.0.3",
     "image-size": "1.0.0",
     "mdx-bundler": "6.0.1",
