--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/util": "1.6.22",
     "@sindresorhus/slugify": "2.1.0",
-    "canvas": "^2.8.0",
+    "canvas": "2.7.0",
     "date-fns": "2.23.0",
     "dotenv": "^10.0.0",
     "esbuild": "0.12.24",
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/nprogress": "0.2.0",
     "@types/react": "17.0.17",
+    "critters": "^0.0.10",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.3.5"
