--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "yarn copyImagesDir && next dev",
     "build": "yarn copyImagesDir && next build",
+    "export": "yarn build && next export -o build",
     "start": "next start",
     "lint": "next lint",
-    "copyImagesDir": "node ./scripts/copyDir.js 'content/Images' 'public/Images'",
+    "copyImagesDir": "node ./scripts/copyDir.js 'content/Images' 'build/static/Images'",
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
