--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@babel/core": "7.15.0",
+    "@babel/generator": "^7.15.4",
     "@babel/helper-plugin-utils": "7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "7.14.7",
     "@babel/plugin-syntax-jsx": "7.14.5",
@@ -45,6 +46,7 @@
     "unist-util-visit": "4.0.0"
   },
   "devDependencies": {
+    "@types/babel__generator": "^7.6.3",
     "@types/nprogress": "0.2.0",
     "@types/react": "17.0.17",
     "critters": "^0.0.10",
